@@ -1,9 +1,21 @@
 // Jest Snapshot v1, https://goo.gl/fbAQLP
 
-exports[`Instant deposit button and modal button renders correctly 1`] = `
+exports[`Instant deposit button and modal button renders correctly with balance 1`] = `
 <div>
   <button
-    class="components-button is-secondary is-secondary"
+    class="components-button is-secondary"
+    type="button"
+  >
+    Instant deposit
+  </button>
+</div>
+`;
+
+exports[`Instant deposit button and modal button renders correctly with zero balance 1`] = `
+<div>
+  <button
+    class="components-button is-secondary"
+    disabled=""
     type="button"
   >
     Instant deposit
@@ -56,9 +68,9 @@ exports[`Instant deposit button and modal modal renders correctly 1`] = `
       </button>
     </div>
     <p>
-      Need cash in a hurry? Instant deposits are available within 30 minutes for a nominal 1% service fee. 
+      Need cash in a hurry? Instant deposits are available within 30 minutes for a nominal 1.5% service fee. 
       <a
-        href="https://docs.woocommerce.com/document/payments/"
+        href="https://docs.woocommerce.com/document/payments/instant-deposits/"
         rel="noopener noreferrer"
         target="_blank"
       >
@@ -77,7 +89,7 @@ exports[`Instant deposit button and modal modal renders correctly 1`] = `
       <li
         class="wcpay-instant-deposits-modal__fee"
       >
-        1% service fee: 
+        1.5% service fee: 
         <span>
           -
           $1.23
@@ -97,12 +109,6 @@ exports[`Instant deposit button and modal modal renders correctly 1`] = `
       type="button"
     >
       Deposit $122.22 now
-    </button>
-    <button
-      class="components-button is-secondary"
-      type="button"
-    >
-      Close
     </button>
   </div>
 </div>
